fdo#82071 RTF import: get rid of unexpected underlining in TOC field

Regression from commit 9679e9c23216decb5f9f25f85b04cb3f25211111
(fdo#69649 Fix for pre-rendered Table Of Contents, 2013-12-30), now that
we handle hand-edited TOC, it's necessary to properly track correctly if
a property came from a style or as a direct formatting.

Fix RTFDocumentImpl::getProperties() to detect direct formatting that
cames from a char style and would result in attribute tokens.

Change-Id: Iab5a14770de43249961c280a5dc698200abc8f49